:lipstick: added last endpoints for admin